<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">parandroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_alerta">Crear Nueva Alerta</string>
    <string name="mail_check">Enviar Alerta por Mail</string>
    <string name="sms_check">Enviar Alerta pos SMS</string>
    <string name="nueva_alerta">CREAR NUEVA ALERTA</string>
    <string name="contenido">Agregar Texto de Mensaje</string>
    <string name="ubicacion">Adjuntar ubicación actual</string>
    <string name="boton_siguiente"> Siguiente  </string>
    <string name="hint_text">Mensaje a enviar</string>
    <string name="foto">Agregar foto</string>
    <string name="comenzar">Incializar Alarma</string>
    <string name="destinatario">INGRESE CONTACTO</string>
    <string name="agregar_contacto">Agregar</string>
    <string name="timerPiker">tiempo</string>
    <string name="button_timer">Continuar</string>
    <string name="cancelarAlarma">Cancelar Alarma</string>
    <string name="title_activity_app_preferences">AppPreferences</string>

</resources>
