
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    >
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
/>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="10dp"
        android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nueva_alerta"
        android:id="@+id/txt_nueva_alerta"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
     />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_check"
        android:id="@+id/mail_check"
        android:checked="true"
        android:layout_marginLeft="70dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_check"
        android:id="@+id/sms_check"
        android:checked="true"
        android:layout_marginLeft="70dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ubicacion"
        android:id="@+id/ubicacion"
        android:checked="true"
        android:layout_marginLeft="70dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contenido"

        android:id="@+id/contenido"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/cuerpo"
        android:layout_weight="0.44"
        android:layout_gravity="center"
        android:hint="@string/hint_text"


        android:background="#ffa4f7e8"/>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="20dp">
    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="Agregar foto"
        android:id="@+id/agregarFoto"
        android:layout_marginLeft="20dp"

        />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/boton_siguiente"
        android:id="@+id/boton_siguiente"
        android:layout_gravity="right"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="10dp"

        />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
